[tool.poetry]
name = "repl_python3_Youmu-bot"
version = "0.1.0"
description = ""
authors = ["4gboframram <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
ply = "^3.11"
discord = "^1.0.1"
bs4 = "^0.0.1"
skingrabber=""
discord-py-slash-command=""
discord-components=""
pillow=""
lxml=""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
